--- a/src/main/res/layout/activity_elections.xml
+++ b/src/main/res/layout/activity_elections.xml
@@ -13,6 +13,38 @@
             android:layout_height="51dp"
             android:background="@drawable/back4">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="60dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="Elections"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp">
+
+
+                <TextView
+                    android:id="@+id/userName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+
+                    android:gravity="center_vertical|center_horizontal"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_account_circle_black_24dp" />
+            </LinearLayout>
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbaelections"
                 android:layout_width="match_parent"
@@ -77,70 +109,13 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/butonlar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tab"
-        android:orientation="vertical">
+    <ListView
+    android:id="@+id/dynamicList"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/tab">
 
-
-        <Button
-            android:id="@+id/sport"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:text="Sport" />
-
-        <Button
-            android:id="@+id/history"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:text="History" />
-
-        <Button
-            android:id="@+id/culture"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:text="Culture" />
-
-        <Button
-            android:id="@+id/science"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:text="Science" />
-
-        <Button
-            android:id="@+id/cinema"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:text="Cinema" />
-
-        <Button
-            android:id="@+id/art"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:text="Art" />
-    </LinearLayout>
-
-
+</ListView>
     <LinearLayout
         android:id="@+id/ürünara2"
         android:layout_width="match_parent"
