--- a/src/main/res/layout/deleted_items.xml
+++ b/src/main/res/layout/deleted_items.xml
@@ -8,8 +8,8 @@
     android:weightSum="3">
 
 
-
     <LinearLayout
+        android:id="@+id/deletedlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
@@ -18,9 +18,8 @@
         android:layout_marginBottom="3dp"
         android:layout_weight="1"
         android:background="@android:color/transparent"
-        android:orientation="horizontal"
 
-        >
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/image1"
@@ -74,20 +73,30 @@
             android:orientation="vertical">
 
             <ImageButton
+                android:id="@+id/helpbutton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/ic_edit_black_24dp" />
+                android:background="@drawable/ic_help_black_24dp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Edit"
+                android:text="Help"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
-
+    <TextView
+        android:id="@+id/reason1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/deletedlayout"
+        android:text="Reason:"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 </RelativeLayout>
