--- a/src/main/res/layout/rejected_items.xml
+++ b/src/main/res/layout/rejected_items.xml
@@ -73,6 +73,7 @@
             android:orientation="vertical">
 
             <ImageButton
+                android:id="@+id/editbutton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="5dp"
